--- a/.github/workflows/PROD-APP.yml
+++ b/.github/workflows/PROD-APP.yml
@@ -1,6 +1,9 @@
 ---
 name: Deploy to Airflow PROD
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
 env:
   AWS_ACCESS_KEY_ID: AWS_ACCESS_KEY_ID
   AWS_SECRET_ACCESS_KEY: AWS_SECRET_ACCESS_KEY
