--- a/.github/workflows/PROD-APP.yml
+++ b/.github/workflows/PROD-APP.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Deploy
         run: |
           
-          terraform init && terraform apply --auto-approve
+          terraform init && terraform destroy --auto-approve
       
